--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "serve": "webpack-dev-server"
   },
   "dependencies": {
+    "apexcharts": "^3.8.0",
     "promise-polyfill": "^8.1.3",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.4.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
